<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="170dp"
    android:background="@color/OrangeRed"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="67dp"
        android:layout_height="60dp"
        android:contentDescription="@string/app_icon"
        android:paddingTop="5dp"
        android:src="@mipmap/music_player_icon_round"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="55dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="213dp"
        android:layout_height="26dp"
        android:layout_marginEnd="104dp"
        android:paddingTop="5dp"
        android:text="@string/textNav"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-4dp" />

    <TextView
        android:layout_width="233dp"
        android:layout_height="78dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="5dp"
        android:text="@string/text_nav2"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.868"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>