<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:context=".MainActivity">
    <!--    tools:openDrawer="start"-->
    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent">-->

    <!--        <com.google.android.material.appbar.MaterialToolbar-->
    <!--            android:id="@+id/material_Toolbar"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintHorizontal_bias="0.5"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:navigationIcon="@drawable/menu_icon"-->
    <!--            app:title="@string/app_name"-->
    <!--            tools:ignore="MissingConstraints" />-->

    <!--        <FrameLayout-->
    <!--            android:id="@+id/fragment_container"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="0dp"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintHorizontal_bias="0.5"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/material_Toolbar" />-->

    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    <!--    <com.google.android.material.navigation.NavigationView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_gravity="start"-->
    <!--        android:fitsSystemWindows="true"-->
    <!--        app:menu="@menu/nav_menu"-->
    <!--        app:headerLayout="@layout/header_layout"-->
    <!--        android:id="@+id/MusicPlayer"-->
    <!--        app:background="@color/black" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            app:navigationIcon="@drawable/menu_icon"
            app:navigationIconTint="@color/white"
            tools:ignore="MissingConstraints"
            app:titleTextColor="@color/white"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="55dp">

            <!-- for button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                style="@style/Widget.AppCompat.Button.Borderless">

                <Button
                    android:id="@+id/shuffleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/shuffle_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/shuffle_icon"
                    android:text="@string/shuffle_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/favouriteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/favourite_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/favorite_icon"
                    android:text="@string/favourite_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/playlistBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/playlist_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/playlist_icon"
                    android:text="@string/playlist_button"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_song"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation View -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/header_layout"
        app:background="@color/white" />


</androidx.drawerlayout.widget.DrawerLayout>